Scrollbar/link fix

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ table {
 	background-size: cover;
 	height: auto;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	font-weight: bold;
 	font-size: 2.125vw;
